fix: update z-index for nav and add margin to edit form in edit-available-products page

--- a/frontend/mysell/src/app/pages/edit-available-products/edit-available-products.page.scss
+++ b/frontend/mysell/src/app/pages/edit-available-products/edit-available-products.page.scss
@@ -18,7 +18,7 @@ main {
   scroll-behavior: smooth;
 }
 nav {
-  z-index: 10000000;
+  z-index: 100000;
   height: 10vh;
 }
 .title {
@@ -40,4 +40,10 @@ nav {
     position: absolute;
     left: 0;
   }
+}
+.edit-form {
+  border-bottom: 2px solid var(--medium-gray);
+
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
